--- a/.github/workflows/tickets-on-merge.yml
+++ b/.github/workflows/tickets-on-merge.yml
@@ -49,4 +49,5 @@ jobs:
 
           PROJECT_FIELD_STATUS: Status
           PROJECT_FIELD_AREA: Area
+          PROJECT_STATUS_MERGED: Merged
         run: node .github/scripts/tickets.js
