--- a/.github/workflows/tickets-sync.yml
+++ b/.github/workflows/tickets-sync.yml
@@ -58,4 +58,5 @@ jobs:
 
           PROJECT_FIELD_STATUS: Status
           PROJECT_FIELD_AREA: Area
+          PROJECT_STATUS_MERGED: Merged
         run: node .github/scripts/tickets.js
